[structural update v1.9.3] travel-planner structural update, Phrase 1, based on safety, correction and constructural abstraction.